--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "passport-smartthings",
-  "version": "0.3.2",
+  "version": "0.3.7",
   "description": "A Passport.js OAuth 2.0 strategy for Smart Things",
   "main": "lib/passport-smartthings",
   "scripts": {
-    "test": "NODE_PATH=lib node_modules/.bin/vows test/*-test.js"
+    "test": "NODE_PATH=lib node_modules/.bin/jasmine-node --test-dir spec"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "pkginfo": "0.3.0"
   },
   "devDependencies": {
-    "vows": "~0.8.1"
+    "jasmine-node": "^1.14.5",
+    "oauth": "^0.9.12"
   }
 }
